# bones-kernel

./: .gitignore  CODE OVERVIEW.txt  LICENSES  PLANNING.md  PROJECT.md  README.md  local_build_all.py  pyproject.toml  setup.cfg  setup.py  test_md.run.xml
.github/workflows/: build_wheels.yml
docs/: abi.md  bones cheatsheet.md  boxing.md  buckets.md  c-style.md  composable string api.md  exceptions.md  fn selection.md  hashtable.md  kernel.md  metatypes and fn selection.md  notes on c coding.md  overview.md  people.md  potential projects.md  products and exponentials.md  reference.md  references.md  rst.md  setup.py.md  style.md  terms.md  type manager.md  type system - dispatch.md  type system - manager.md  type system - type lang.md  type system - types.md  type system.md  utf8.md  white paper - the bones type system.md
docs/cheatsheets/: bones kernel - cheatsheet.md  bones lang - cheatsheet.md  bones rst - cheatsheet.md
docs/dtd/: 2023.09.30.md  sizes of things.xlsx
include/: all.cfg
include/bk/: _cfg.h  bk.h  btype.h  buckets.h  em.h  hi.h  ht.h  k.h  kernel.h  mm.h  om.h  os.h  qbe.h  rst.h  sm.h  sym.h  tl.h  tm.h  tm_btypeid_t_enum.h  tp.h  tpm.h
include/jones/: config.h  jones.h
include/qu/: black.h  brent.h  dists.h  poly.h  qu.h  rn.h  (+2 more)
lib/: mac_set_paths.sh  setup-wip.py  setup.cfg  setup.py  win_set_paths.bat
py/: BUILDME.md  RUNME.md  python3.11-2024-05-08-055006.ips  set_paths.sh  setup.py  test_all.py
pytests/: BUILDME.md  setup.cfg  setup.py  test_all.py
reference/: khash.h  ksort.h
src/: README.md
srcpy/: setup.cfg  setup.py
(+172 files in other folders)
