[project]
name = "bones-kernel"
requires-python = ">= 3.11"
dependencies = [
    "numpy>=1.17.3",
]
description = "Lovely Spam! Wonderful Spam!"
version = "2025.8.7a1"              # https://packaging.python.org/en/latest/specifications/version-specifiers/#version-specifiers

[tool.cibuildwheel]
build = "cp311-*"                   # https://cibuildwheel.pypa.io/en/stable/options/#build-skip
